fix #85 - make custom scrollbar optional

--- a/src/style/scrollbar.css
+++ b/src/style/scrollbar.css
@@ -1,21 +1,21 @@
-::-webkit-scrollbar {
+html.use-custom-scrollbar ::-webkit-scrollbar {
   width: calc(0.5rem + var(--small));
   height: var(--small);
 }
 
-::-webkit-scrollbar-thumb {
+html.use-custom-scrollbar ::-webkit-scrollbar-thumb {
   background: var(--fg-mid);
   border: var(--fg-light-alpha) solid thin;
   border-radius: var(--medium);
 }
 
-::-webkit-scrollbar-track {
+html.use-custom-scrollbar ::-webkit-scrollbar-track {
   background-color: inherit;
 }
 
 /* Turn on single button up on top, and down on bottom */
-::-webkit-scrollbar-button:start:decrement,
-::-webkit-scrollbar-button:end:increment {
+html.use-custom-scrollbar ::-webkit-scrollbar-button:start:decrement,
+html.use-custom-scrollbar ::-webkit-scrollbar-button:end:increment {
   display: block;
   height: var(--medium);
 }
